--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.6.8",
     "bcryptjs": "^2.4.3",
     "bootstrap": "^5.3.3",
+    "bootstrap-icons": "^1.11.3",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.4",
     "md5": "^2.3.0",
